# spaceship-operator-examples

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: SimpleStruct.cpp.9F016146AC2482BD.idx  SimpleStruct.h.7B75BABE7C181D34.idx  Tests.cpp.668ADF7DD0FE0003.idx  catch_amalgamated.cpp.2F0C8FFD16CD46B9.idx  catch_amalgamated.cpp.BAB0CC32A4EE372A.idx  catch_amalgamated.hpp.7DA2AC77502E3D3E.idx  catch_amalgamated.hpp.F8711CDFF2B891BF.idx  main.cpp.4E80584D49F3EC78.idx  main.cpp.D3C7D357B2F46155.idx
include/: Fraction.h  SimpleStruct.h
src/: Fraction.cpp  SimpleStruct.cpp  Tests.cpp
src/catch2/: catch_amalgamated.cpp
